Add basic collision handling